--- a/Source/CriticalPath.Web/Views/Customers/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Customers/Index.cshtml
@@ -79,6 +79,9 @@
                                     </a>
                                 </li>
                             }
+                            <li class="divider"></li>
+                                <li>@Html.ActionLink(EntityStrings.CreateContact, "Create", "Contacts", new { companyId = item.Id }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.CreatePuchaseOrder, "Create", "PuchaseOrders", new { customerId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
