--- a/Source/CriticalPath.Web/Views/PuchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PuchaseOrders/Create.cshtml
@@ -61,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Notes, new { @class = "form-control" })
+                @Html.EditorFor(m => m.Notes, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
