--- a/Source/CriticalPath.Web/Views/PuchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PuchaseOrders/Index.cshtml
@@ -81,6 +81,8 @@
                                     </a>
                                 </li>
                             }
+                            <li class="divider"></li>
+                                <li>@Html.ActionLink(EntityStrings.CreateOrderItem, "Create", "OrderItems", new { puchaseOrderId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
