--- a/Source/CriticalPath.Web/Views/OrderItems/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/OrderItems/Index.cshtml
@@ -68,7 +68,7 @@
                                 </li>
                             }
                             <li class="divider"></li>
-                                <li>@Html.ActionLink(EntityStrings.CreateProcess, "Create", "Processes", new { orderItemId = item.Id }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.AddProcess, "Create", "Processes", new { orderItemId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
