--- a/Source/CriticalPath.Web/Views/ProcessTemplates/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessTemplates/Index.cshtml
@@ -78,7 +78,7 @@
                                 </li>
                             }
                             <li class="divider"></li>
-                                <li>@Html.ActionLink(EntityStrings.CreateProcessStepTemplate, "Create", "ProcessStepTemplates", new { processTemplateId = item.Id }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.AddProcessStepTemplate, "Create", "ProcessStepTemplates", new { processTemplateId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
