--- a/Source/CriticalPath.Web/Views/PuchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PuchaseOrders/Index.cshtml
@@ -82,7 +82,7 @@
                                 </li>
                             }
                             <li class="divider"></li>
-                                <li>@Html.ActionLink(EntityStrings.CreateOrderItem, "Create", "OrderItems", new { puchaseOrderId = item.Id }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.AddOrderItem, "Create", "OrderItems", new { puchaseOrderId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
