--- a/Source/CriticalPath.Web/Views/OrderItems/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/OrderItems/Details.cshtml
@@ -10,10 +10,10 @@
 
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.PuchaseOrder)
+        @Html.DisplayNameFor(model => model.PurchaseOrder)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.PuchaseOrder)
+        @Html.DisplayFor(m => m.PurchaseOrder)
     </div>
 </div>
 <div class="row">
