--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
@@ -1,11 +1,11 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model PuchaseOrder
+@model PurchaseOrder
 @{
-    ViewBag.Title = EntityStrings.CreatePuchaseOrder;
+    ViewBag.Title = EntityStrings.EditPurchaseOrder;
 }
-<h2>@EntityStrings.PuchaseOrder</h2>
+<h2>@EntityStrings.PurchaseOrder</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
