--- a/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
@@ -3,8 +3,8 @@
 @using CriticalPath.Data.Resources
 @model string
 <script>
-    function setPager(pageNr) {
-        $('#pageNr').val(pageNr);
+    function setPager(page) {
+        $('#page').val(page);
         $('#searchForm').submit();
     }
     function setDelete(item, id) {
