--- a/Source/CriticalPath.Web/Views/OrderItems/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/OrderItems/Edit.cshtml
@@ -15,7 +15,7 @@
         @Html.HiddenFor(model => model.Id)
         
         @Html.HiddenFor(m => m.DisplayOrder)
-        @Html.HiddenFor(m => m.PuchaseOrderId)
+        @Html.HiddenFor(m => m.PurchaseOrderId)
         <div class="form-group">
             @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
             <div class="col-md-10 col-sm-9">
