--- a/Source/CriticalPath.Web/Views/ProcessSteps/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessSteps/Details.cshtml
@@ -66,6 +66,14 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.Template)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.Template)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
         @Html.DisplayNameFor(model => model.IsApproved)
     </label>
     <div class="col-md-10 col-sm-9">
