--- a/Source/CriticalPath.Web/Views/ProcessSteps/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessSteps/Edit.cshtml
@@ -58,6 +58,13 @@
                 @Html.ValidationMessageFor(m => m.RealizedDate, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.TemplateId, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
+            <div class="col-md-10 col-sm-9">
+                @Html.DropDownList("TemplateId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.TemplateId, "", new { @class = "text-danger" })
+            </div>
+        </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
