--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
@@ -1,12 +1,12 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model PuchaseOrder
+@model PurchaseOrder
 @{
-    ViewBag.Title = EntityStrings.PuchaseOrder;
+    ViewBag.Title = EntityStrings.PurchaseOrder;
 }
 
-<h2>@EntityStrings.PuchaseOrder @ActionStrings.Details</h2>
+<h2>@EntityStrings.PurchaseOrder @ActionStrings.Details</h2>
 
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
