--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -42,11 +42,11 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            @EntityStrings.PuchaseOrders<b class="caret"></b>
+                            @EntityStrings.PurchaseOrders<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@EntityStrings.PuchaseOrders, "Index", "PuchaseOrders")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreatePuchaseOrder, "Create", "PuchaseOrders")</li>
+                            <li>@Html.ActionLink(@EntityStrings.PurchaseOrders, "Index", "PurchaseOrders")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreatePurchaseOrder, "Create", "PurchaseOrders")</li>
                             <li class="divider"></li>
                             <li>@Html.ActionLink(@EntityStrings.Customers, "Index", "Customers")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreateCustomer, "Create", "Customers")</li>
