--- a/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
@@ -3,12 +3,12 @@
 @using CriticalPath.Data.Resources
 @{
     Layout = null;
-    int pageNr = ViewBag.pageNr;
+    int page = ViewBag.page;
     int totalCount = ViewBag.totalCount;
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
     int pagers = pageCount > 10 ? 10 : pageCount;
-    int pagerStart = pageNr > 5 ? pageNr - (pagers / 2) : 1;
+    int pagerStart = page > 5 ? page - (pagers / 2) : 1;
     if ((pagerStart + pagers) > pageCount)
     {
         pagerStart = pageCount - pagers + 1;
@@ -18,7 +18,7 @@
 {
 <nav>
     <ul class="pagination">
-        @if (pageNr == 1)
+        @if (page == 1)
         {
             <li class="disabled">
                 <a aria-label="Previous">
@@ -39,14 +39,14 @@
                 </a>
             </li>
             <li>
-                <a href="#" aria-label="Previous" onclick="setPager(@(pageNr - 1))">
+                <a href="#" aria-label="Previous" onclick="setPager(@(page - 1))">
                     <span aria-hidden="true">&lsaquo;</span>
                 </a>
             </li>
         }
         @for (int i = pagerStart; i < (pagerStart + pagers); i++)
         {
-            if (pageNr == i)
+            if (page == i)
             {
                 <li class="active"><a>@i <span class="sr-only">(current)</span></a></li>
             }
@@ -55,10 +55,10 @@
                 <li><a href="#" onclick="setPager(@i)">@i</a></li>
             }
         }
-        @if (pageNr < pageCount)
+        @if (page < pageCount)
         {
             <li>
-                <a href="#" aria-label="Next" onclick="setPager(@(pageNr + 1))">
+                <a href="#" aria-label="Next" onclick="setPager(@(page + 1))">
                     <span aria-hidden="true">&rsaquo;</span>
                 </a>
             </li>
