App theme can be set at run-time

--- a/Source/CriticalPath.Web/Content/Slate/Light.css
+++ b/Source/CriticalPath.Web/Content/Slate/Light.css
@@ -1,8 +1,8 @@
 ﻿body {
-    background:#272b30;
+    background:#303436;
 }
 table{
-    background:#303436;
+    background:#34383a;
 }
 .form-control{
     background:#e0e4e6;
