--- a/Source/CriticalPath.Web/Views/Shared/_SaveButtonsPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_SaveButtonsPartial.cshtml
@@ -2,10 +2,10 @@
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
 <div class="form-group">
-    <div class="col-md-offset-2 col-md-2">
-        @Html.ActionLink(@ActionStrings.BackToIndex, "Index", null, new { @class = "btn btn-default" })
+    <div class="col-md-offset-2 col-sm-offset-3 col-md-2 col-xs-4">
+        <input type="submit" value='@ActionStrings.Save' class="btn btn-lg btn-primary" />
     </div>
-    <div class="col-md-2">
-        <input type="submit" value='@ActionStrings.Save' class="btn btn-default" />
+    <div class="col-md-2 col-xs-4">
+        @Html.ActionLink(@ActionStrings.BackToIndex, "Index", null, new { @class = "btn btn-lg btn-info" })
     </div>
 </div>
