--- a/Source/CriticalPath.Web/Views/Account/Login.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Login.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = OzzIdentity.Resources.TitleStrings.Login;
 }
 
-<div class="row">
-    <div class="col-sm-offset-2 col-md-offset-3 col-sm-8 col-md-6">
-        <h2>@ViewBag.Title.</h2>
+<div class="row mt30">
+    <div class="col-lg-offset-1 col-sm-9 col-md-8 col-lg-7">
+        <h2 class="col-sm-offset-4 col-md-offset-3">@ViewBag.Title.</h2>
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -14,33 +14,33 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-sm-4 control-label" })
+                    <div class="col-sm-8">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-sm-4 control-label" })
+                    <div class="col-sm-8">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
+                    <div class="col-sm-offset-4 col-xs-8">
+                        <div class="checkbox ml20">
                             @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe, new { @class = "pl10" })
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-6">
-                        <input type="submit" value='@OzzIdentity.Resources.TitleStrings.Login' class="btn btn-default" />
+                    <div class="col-xs-4 col-sm-offset-4">
+                        <input type="submit" value='@OzzIdentity.Resources.TitleStrings.Login' class="btn btn-lg btn-default" />
                     </div>
-                    <div class="col-md-6">
-                        @Html.ActionLink(OzzIdentity.Resources.TitleStrings.Register, "Register",null,new { @class = "btn btn-primary" })
+                    <div class="col-md-4 col-xs-4">
+                        @Html.ActionLink(OzzIdentity.Resources.TitleStrings.Register, "Register",null,new { @class = "btn btn-primary pull-right" })
                     </div>
                 </div>
                 @* Enable this once you have account confirmation enabled for password reset functionality
