--- a/Source/CriticalPath.Web/Views/Account/VerifyCode.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/VerifyCode.cshtml
@@ -2,36 +2,39 @@
 @{
     ViewBag.Title = "Verify";
 }
-
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
-    @Html.AntiForgeryToken()
-    @Html.Hidden("provider", @Model.Provider)
-    @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Enter verification code</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Code, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <div class="checkbox">
-                @Html.CheckBoxFor(m => m.RememberBrowser)
-                @Html.LabelFor(m => m.RememberBrowser)
+<div class="row">
+    <div class="col-sm-offset-1 col-md-offset-2 col-lg-offset-3 col-sm-9 col-md-8 col-lg-7">
+        <h2 class="col-sm-offset-4 col-md-offset-3">@ViewBag.Title.</h2>
+        @using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.Hidden("provider", @Model.Provider)
+            @Html.Hidden("rememberMe", @Model.RememberMe)
+            <h4 class="col-sm-offset-4 col-md-offset-3">Enter verification code</h4>
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(m => m.Code, new { @class = "col-md-3 col-sm-4 control-label" })
+                <div class="col-sm-8">
+                    @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
+                </div>
             </div>
-        </div>
+            <div class="form-group">
+                <div class="col-md-offset-3 col-sm-offset-4 col-xs-8">
+                    <div class="checkbox ml20">
+                        @Html.CheckBoxFor(m => m.RememberBrowser)
+                        @Html.LabelFor(m => m.RememberBrowser)
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class=" class=" col-sm-offset-4 col-md-offset-3 col-sm-8"">
+                    <input type="submit" class="btn btn-default" value="Submit" />
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
-        </div>
-    </div>
-}
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
