--- a/Source/CriticalPath.Web/Views/Contacts/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Contacts/Create.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = EntityStrings.CreateContact;
 }
-<h2>@EntityStrings.Contact</h2>
+<h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,58 +15,58 @@
         @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.EmailWork, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.EmailWork, new { @class = "form-control" })
+            @Html.LabelFor(model => model.EmailWork, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.EmailWork, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.EmailWork, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.EmailHome, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.EmailHome, new { @class = "form-control" })
+            @Html.LabelFor(model => model.EmailHome, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.EmailHome, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.EmailHome, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PhoneMobile, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.PhoneMobile, new { @class = "form-control" })
+            @Html.LabelFor(model => model.PhoneMobile, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.PhoneMobile, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.PhoneMobile, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PhoneWork1, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.PhoneWork1, new { @class = "form-control" })
+            @Html.LabelFor(model => model.PhoneWork1, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.PhoneWork1, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.PhoneWork1, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PhoneWork2, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.PhoneWork2, new { @class = "form-control" })
+            @Html.LabelFor(model => model.PhoneWork2, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.PhoneWork2, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.PhoneWork2, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.Notes, new { @class = "form-control" })
+            @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Notes, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
