--- a/Source/CriticalPath.Web/Views/Manage/SetPassword.cshtml
+++ b/Source/CriticalPath.Web/Views/Manage/SetPassword.cshtml
@@ -2,38 +2,42 @@
 @{
     ViewBag.Title = OzzIdentity.Resources.TitleStrings.SetPassword;
 }
+<div class="row">
+    <div class="col-lg-offset-1 col-sm-9 col-md-8 col-lg-7">
+        <h2 class="col-sm-offset-4">@ViewBag.Title.</h2>
 
-<h2>@ViewBag.Title.</h2>
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
+        <p class="text-info col-sm-offset-4">
+            You do not have a local username/password for this site. Add a local
+            account so you can log in without an external login.
+        </p>
 
-@using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
+        @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
+            <h4 class="col-sm-offset-4">Create Local Login</h4>
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(m => m.NewPassword, new { @class = "col-sm-4 control-label" })
+                <div class="col-sm-8">
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-sm-4 control-label" })
+                <div class="col-sm-8">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-8">
+                    <input type="submit" value='@OzzIdentity.Resources.TitleStrings.SetPassword' class="btn btn-default" />
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value='@OzzIdentity.Resources.TitleStrings.SetPassword' class="btn btn-default" />
-        </div>
-    </div>
-}
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
