--- a/Source/CriticalPath.Web/Views/ProcessSteps/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessSteps/Edit.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = EntityStrings.EditProcessStep;
 }
-<h2>@EntityStrings.ProcessStep</h2>
+<h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,22 +15,22 @@
         @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.DisplayFor(m => m.Title)
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.IsCompleted, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.IsCompleted, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.IsCompleted, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.IsCompleted, "", new { @class = "text-danger" })
             </div>
@@ -38,29 +38,29 @@
         @Html.HiddenFor(m => m.DisplayOrder)
         @Html.HiddenFor(m => m.ProcessId)
         <div class="form-group">
-            @Html.LabelFor(model => model.TargetDate, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.TargetDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.TargetDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.TargetDate, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.ForecastDate, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.ForecastDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.ForecastDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.ForecastDate, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.RealizedDate, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.RealizedDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.RealizedDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.RealizedDate, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.TemplateId, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.TemplateId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.DropDownList("TemplateId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.TemplateId, "", new { @class = "text-danger" })
             </div>
