--- a/Source/CriticalPath.Web/Views/ProcessTemplates/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessTemplates/Create.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = EntityStrings.CreateProcessTemplate;
 }
-<h2>@EntityStrings.ProcessTemplate</h2>
+<h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,16 +15,16 @@
         @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.TemplateName, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.TemplateName, new { @class = "form-control" })
+            @Html.LabelFor(model => model.TemplateName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.TemplateName, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.TemplateName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.DefaultTitle, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.DefaultTitle, new { @class = "form-control" })
+            @Html.LabelFor(model => model.DefaultTitle, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.DefaultTitle, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.DefaultTitle, "", new { @class = "text-danger" })
             </div>
         </div>
