--- a/Source/CriticalPath.Web/Views/Processes/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Processes/Edit.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = EntityStrings.EditProcess;
 }
-<h2>@EntityStrings.Process</h2>
+<h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,30 +15,30 @@
         @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Description, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.IsCompleted, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.IsCompleted, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.IsCompleted, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.IsCompleted, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.HiddenFor(m => m.OrderItemId)
         <div class="form-group">
-            @Html.LabelFor(model => model.ProcessSteps, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
+            @Html.LabelFor(model => model.ProcessSteps, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.ProcessSteps, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
