--- a/Source/CriticalPath.Web/Views/ProductCategories/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/ProductCategories/Edit.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = EntityStrings.EditProductCategory;
 }
-<h2>@EntityStrings.ProductCategory</h2>
+<h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,31 +15,31 @@
         @Html.HiddenFor(model => model.Id)
         
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.TextBoxFor(m => m.Code, new { @class = "form-control" })
+            @Html.LabelFor(model => model.ParentCategoryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownList("ParentCategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.ParentCategoryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.EditorFor(m => m.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-7 col-md-8 col-sm-9">
+                @Html.TextAreaFor(m => m.Description, 4, 1, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.ParentCategoryId, htmlAttributes: new { @class = "control-label col-md-2 col-sm-3" })
-            <div class="col-md-10 col-sm-9">
-                @Html.DropDownList("ParentCategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.ParentCategoryId, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.Partial("_SaveButtonsPartial")
